--- a/css1.html
+++ b/css1.html
@@ -250,7 +250,7 @@
 </head>
 <body>
     <nav>
-    <a href="index1.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="css1.html">About</a>
     <a href="portfolio.html">Portolio</a>
   </nav>
